# usb-motor-stepper

./: .cproject  .gitignore  .project  CMakeLists.txt  FindCrossbuild.cmake  Makefile  README  README.markdown
device/: CMakeLists.txt
device/common/: commands.c  commands.h  messages.h  platform.h  stepper.c  stepper.h  umc.c  umc.h  ums.c  ums.h
device/lpc-p1343-rowley/: CMakeLists.txt  asap2.c  lpc134x.h  main.c  platform.c  projectconfig.h  step_timer.c  step_timer.h  sysinit.c  sysinit.h  umc.hzp  umc.hzs  ums.hzp  ums.hzs
device/lpc-p1343-rowley/core/cpu/: cpu.c
device/lpc-p1343-rowley/core/gpio/: gpio.c  gpio.h
device/lpc-p1343-rowley/core/usbcdc/: cdcuser.c  cdcuser.h  usb.h  usbcore.c  usbcore.h  usbhw.c
device/sim/: Axis.hpp  Platform.cpp  Platform.hpp  SimLink.cpp  SimLink.hpp
host/: CMakeLists.txt
host/cli/: CMakeLists.txt  main.cpp
host/lib/: AcceptMsgInfo.cpp  AxisCmdInfo.cpp  AxisInfo.cpp  CMakeLists.txt  CommandInfo.cpp  CommandInfo.hpp  DebugInfo.cpp  DelayCmdInfo.cpp  ErrorInfo.cpp  ErrorMsgInfo.cpp  Host.cpp  Host.hpp  ILink.hpp  LineCmdInfo.cpp  LineInfo.cpp  MemoryLink.hpp  MessageInfo.cpp  MessageInfo.hpp  NoOpCmdInfo.cpp  NoOpInfo.cpp  PingCmdInfo.cpp  PingInfo.cpp  PongMsgInfo.cpp  ResetInfo.cpp  SerialLink.cpp  SerialLink.hpp  StatusMsgInfo.cpp  StepCmdInfo.cpp  StepInfo.cpp  UMS_DLL.h  WarnInfo.cpp  WarnMsgInfo.cpp
host/scripts/: triangle.steps
host/test/: CMakeLists.txt  device_test.cpp  hello_test.cpp  ping_test.cpp  serial_test.cpp  sim_test.cpp
